# lyn-lab

./: CMakeLists.txt  conanfile.txt  lynmake.sh
src/: main.cpp
